[tool.poetry]
name = "crashguildapi"
version = "0.1.0"
description = ""
authors = ["Miguel Pombo"]
readme = "README.md"
packages = [{include = "api"}]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.21"
flask = "^3.0.0"
pydantic = "^2.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
